[package]
# TODO: Rename this package to change the method name from METHOD_NAME
name = "ed25519_verify"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.16.0", default-features = false, features = ["std"] }
ed25519-dalek = {version = "2.0.0-rc.3", default-features = false}
elliptic-curve = { version = "0.13", default-features = false, features = ["hazmat", "sec1"] }
hex-literal = "0.4"
curve25519-dalek = { version = "=4.0.0-rc.3", default-features = false }

[patch.crates-io.crypto-bigint]
git = "https://github.com/risc0/RustCrypto-crypto-bigint"
tag = "v0.5.2-risc0"

[patch.crates-io.sha2]
git = "https://github.com/risc0/RustCrypto-hashes"
tag = "sha2-v0.10.6-risc0"

